Should be stable version Features: - Added Authorization - Added Roles and Roles Hierarchy - Added basic Route Guards - Reworked table to use searchSelect when needed Bugfixes: - Reworked the User interface into IUser and added a User class to ease role manipulation - Reworked authentication flow to take into account the use of HTTPOnly cookie for login. - Reworked auth service accordingly - Fixed bug that made the mobile app unusable since reworking authentication - Fixed item's intervention table overflowing

--- a/src/app/intervention/components/intervention-list/intervention-list.component.html
+++ b/src/app/intervention/components/intervention-list/intervention-list.component.html
@@ -35,13 +35,39 @@
   </div>
   <div>
     <div>
-      <label>Filtrer par utilisateur: </label>
+      <label>Filtrer par Utilisateur: </label>
       <div class="flex flex-row items-center content-center align-middle">
-        <select matInput [formControl]="filterBy2" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-          <option [value]="null" selected>---</option>
-          <option *ngFor="let user of users" [value]="user.id">{{user.firstname}} {{user.lastname}}</option>
-        </select>
-        <button (click)="resetFilter2()">
+        <input type="text" matInput [formControl]="searchUserSelect"
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+        placeholder="Chercher un utilisateur"
+        required
+        [matAutocomplete]="autoUser">
+        <mat-autocomplete #autoUser="matAutocomplete" [displayWith]="getUserDisplay.bind(this)" >
+        <mat-option *ngFor="let user of filteredUsersOptions | async" [value]="user.id">
+            {{user.firstname}} {{user.lastname}}
+        </mat-option>
+        </mat-autocomplete>
+        <button (click)="resetSearchUserSelect()">
+          <mat-icon>close</mat-icon>
+        </button>
+      </div>
+    </div>
+  </div>
+  <div>
+    <div>
+      <label>Filtrer par Matériel: </label>
+      <div class="flex flex-row items-center content-center align-middle">
+        <input type="text" matInput [formControl]="searchItemSelect"
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+        placeholder="Chercher une référence"
+        required
+        [matAutocomplete]="autoItem">
+        <mat-autocomplete #autoItem="matAutocomplete" [displayWith]="getItemDisplay.bind(this)" >
+        <mat-option *ngFor="let item of filteredItemsOptions | async" [value]="item.id">
+            {{item.reference}}
+        </mat-option>
+        </mat-autocomplete>
+        <button (click)="resetSearchItemSelect()">
           <mat-icon>close</mat-icon>
         </button>
       </div>
@@ -66,7 +92,7 @@
         <th class="p-3 text-left">Unité</th>
         <th class="p-3 text-left h-14" width="110px">Actions</th>
       </tr>
-      <tr *ngFor="let item of dataSource.data | filter:filterBy.value!:['type','id'] | filter:filterBy2.value:['user','id'] | sort:isAsc.value:sortBy.value! | search:searchBy.value!" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2">
+      <tr *ngFor="let item of dataSource.data | filter:filterBy.value!:['type','id'] | filter:searchUserSelect.value:['user','id'] | filter:searchItemSelect.value!:['item','id'] | sort:isAsc.value:sortBy.value! | search:searchBy.value!" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2">
         <th class="p-3 text-left">ID</th>
         <th class="p-3 text-left">Ticket</th>
         <th class="p-3 text-left">Type</th>
@@ -90,13 +116,13 @@
         <td class="hover:bg-gray-100 p-3"></td>
         <td class="hover:bg-gray-100 p-3 h-14"></td>
       </tr>
-      <tr *ngFor="let intervention of dataSource.data | filter:filterBy.value!:['type','id'] | filter:filterBy2.value:['user','id'] | sort:isAsc.value:sortBy.value! | search:searchBy.value!" class="flex flex-col flex-no-wrap sm:table-row sm:mb-2 mb-0 sm:border-2 sm:border-grey-light">
+      <tr *ngFor="let intervention of dataSource.data | filter:filterBy.value!:['type','id'] | filter:searchUserSelect.value:['user','id'] | filter:searchItemSelect.value!:['item','id'] | sort:isAsc.value:sortBy.value! | search:searchBy.value!" class="flex flex-col flex-no-wrap sm:table-row sm:mb-2 mb-0 sm:border-2 sm:border-grey-light">
         <td class="p-3 text-left">{{intervention.id}}</td>
         <td class="p-3 text-left">{{intervention.ticketNumber||'Pas de ticket'}}</td>
         <td class="p-3 text-left">{{intervention.type.name}}</td>
         <td class="p-3 text-left">{{intervention.user.firstname}} {{intervention.user.lastname}}</td>
         <td class="p-3 text-left">{{intervention.item.reference}}</td>
-        <td class="p-3 text-left">{{intervention.actualDate}}</td>
+        <td class="p-3 text-left">{{intervention.expectedDate | date:'dd-MM-YYYY'}}</td>
         <td class="p-3 text-left">{{intervention.unit}}</td>
         <td class="p-3 text-left">{{intervention.room}}</td>
         <td class="hover:bg-gray-100 p-3 h-14"><button mat-flat-button color="accent" (click)="goTo(intervention.id)">Détails</button></td>
