--- a/src/app/item/components/item-details/item-details.component.html
+++ b/src/app/item/components/item-details/item-details.component.html
@@ -104,23 +104,23 @@
             <div class="font-bold text-xl pb-4 ">
                 <h2>Interventions:</h2>
             </div>
-            <table class="table-auto md:table-fixed">
+            <table class="table-fixed w-full">
                 <thead class="text-left">
                 <tr>
-                    <th class="p-3">Type</th>
-                    <th class="p-3">Utilisateur</th>
-                    <th class="p-3">Description</th>
-                    <th class="p-3">Date de réalisation</th>
-                    <th class="p-3">Emplacement</th>
+                    <th class="p-1 sm:p-3">Type</th>
+                    <th class="p-1 sm:p-3">Utilisateur</th>
+                    <th class="p-1 sm:p-3">Description</th>
+                    <th class="p-1 sm:p-3">Date</th>
+                    <th class="p-1 sm:p-3">Emplacement</th>
                 </tr>
                 </thead>
                 <tbody *ngIf="interventions" class="text-left">
                 <tr *ngFor="let intervention of interventions" class="w-full">
-                    <td class="p-3">{{intervention.type.name}}</td>
-                    <td class="p-3">{{intervention.user.firstname}} {{intervention.user.lastname}}</td>
-                    <td class="p-3">{{intervention.description}}</td>
-                    <td class="p-3">{{intervention.actualDate|date:'dd-MM-yyyy'}}</td>
-                    <td class="p-3">{{intervention.unit}} | {{intervention.room}}</td>
+                    <td class="p-1 sm:p-3">{{intervention.type.name}}</td>
+                    <td class="p-1 sm:p-3">{{intervention.user.firstname}} {{intervention.user.lastname}}</td>
+                    <td class="p-1 sm:p-3">{{intervention.description}}</td>
+                    <td class="p-1 sm:p-3">{{intervention.actualDate|date:'dd-MM-yyyy'}}</td>
+                    <td class="p-1 sm:p-3">{{intervention.unit}} | {{intervention.room}}</td>
                 </tr>
                 </tbody>
             </table>
@@ -161,7 +161,7 @@
                     </div>
                 </div>
             </div>
-            <table class="table-auto md:table-fixed">
+            <table class="table-fixed w-full">
                 <thead class="text-left">
                 <tr>
                     <th class="p-3">Type</th>
@@ -199,7 +199,7 @@
         <div *ngIf="!is_locked" class="flex flex-row-reverse mb-6">
             <button (click)="put()" mat-button mat-flat-button color="primary">Valider</button>
         </div>
-        <div *ngIf="is_locked" class="flex flex-row-reverse mb-6">
+        <div *ngIf="is_locked && auth.hasAuthority('PGM')" class="flex flex-row-reverse mb-6">
             <a (click)="toggleLock()" mat-button mat-flat-button color="accent">Modifier</a>
         </div>
         <div *ngIf="!is_locked" class="flex flex-row-reverse mb-6">
