--- a/src/app/static/components/spinner/spinner.component.html
+++ b/src/app/static/components/spinner/spinner.component.html
@@ -1,3 +1,3 @@
-<div *ngIf="this.loader.isLoading()" class="cssload-container">
-    <div class="cssload-speeding-wheel"></div>
+<div *ngIf="this.loader.isLoading()" class="cssload-container justify-center content-center">
+    <div class="cssload-speeding-wheel fixed top-[40%] left-[40%] sm:left-[48%]"></div>
 </div>
