--- a/src/app/item/components/item-list/item-list.component.scss
+++ b/src/app/item/components/item-list/item-list.component.scss
@@ -22,4 +22,10 @@ thead {
     thead tr:not(:first-child) {
       display: none;
     }
+
+    .border-primary{
+      border-width: 2px;
+      --tw-border-opacity: 1;
+      border-color: mat.get-color-from-palette($accent-palette, A200);
+    }
   }
