Should be a stable version Features: - Invalid entry handling for item and licence imports - Improved item's print to make it consistent even on a smaller screen (still cursed on mobile)

--- a/src/app/item/components/item-import/item-import.component.html
+++ b/src/app/item/components/item-import/item-import.component.html
@@ -16,7 +16,7 @@
         <input #csvInput hidden="true" type="file" onclick="this.value=null" (change)="fileChange($event)" accept=".xlsx"/>
         <button mat-flat-button color="primary" (click)="csvInput.click()">Choisir un fichier (CSV)</button>
     </div>
-    <mat-expansion-panel hideToggle *ngFor="let type of item_types">
+    <mat-expansion-panel hideToggle *ngFor="let type of item_types"  [expanded]="true" class="items-center justify-center content-center align-middle">
         <mat-expansion-panel-header>
           <mat-panel-title>
             {{type.type.name}}
@@ -25,9 +25,9 @@
             Quantité: {{type.items?.length}}
           </mat-panel-description>
         </mat-expansion-panel-header>
-        <table class="table-auto md:table-fixed">
+        <table class="table-auto w-full md:table-fixed">
             <thead class="text-left">
-            <tr class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2">
+            <tr class="rounded-l-lg sm:rounded-none mb-0 sm:mb-2 hidden sm:table-row">
                 <th class="p-3 text-left">Référence</th>
                 <th class="p-3 text-left">Numéro de série</th>
                 <th class="p-3 text-left">Description</th>
@@ -35,8 +35,8 @@
                 <th class="p-3 text-left">Date de réception</th>
                 <th class="p-3 text-left">Prix</th>
                 <th class="p-3 text-left">Fournisseur</th>
-                <th class="p-3 text-left">Unité</th>
-                <th class="p-3 text-left">Local</th>
+                <th class="p-3 text-left">Emplacement</th>
+                <th class="p-3 text-center h-full">Validité</th>
             </tr>
             </thead>
             <tbody *ngIf="type" class="text-left flex-1 sm:flex-none">
@@ -48,8 +48,9 @@
                     <td class="p-3 text-left">{{item.received_at}}</td>
                     <td class="p-3 text-left">{{item.price}}</td>
                     <td class="p-3 text-left">{{item.provider}}</td>
-                    <td class="p-3 text-left">{{item.unit}}</td>
-                    <td class="p-3 text-left">{{item.room}}</td>
+                    <td class="p-3 text-left">{{item.unit}} | {{item.room}}</td>
+                    <td *ngIf="item.is_valid" class="p-3 h-full text-center color bg-green-100"><div class="flex justify-center items-center"><mat-icon>check-circle</mat-icon></div></td>
+                    <td *ngIf="!item.is_valid" class="p-3 h-full text-center color bg-red-100"><div class="flex justify-center items-center"><mat-icon>close</mat-icon></div></td>
                 </tr>
             </tbody>
         </table>          
