--- a/src/app/item/components/item-details/item-details.component.html
+++ b/src/app/item/components/item-details/item-details.component.html
@@ -2,7 +2,7 @@
     <div class="font-bold text-2xl pb-10 flex flex-row justify-between">
         <h2>Détails: </h2>
         <div>
-            <a mat-button mat-flat-button color="accent" (click)="getAsPdf()" class="mr-4">Imprimer</a>
+            <a *ngIf="!isMobile()" mat-button mat-flat-button color="accent" (click)="getAsPdf()" class="mr-4">Imprimer</a>
             <a mat-button mat-flat-button color="accent" (click)="goToInterventionCreation()">Nouvelle opération</a>
         </div>
     </div>
