Should be a stable version Features: - Added User list - Added Update - Added User activation/deactivation - Added logic to handle deactivated users - Reworked guards so that they use an observable pointing towards the user This will allow the guard to wait for the auth service to finish fetching the user info before trying to validate it's authorities - Reworked auth service to allow the use of an obeservable to validate user's authorities Bug fixes: - Fixed a bug preventing the filter from filtering booleans - Fixed a bug that made the Sorting pipe return Item type object instead of anonymous objects

--- a/src/app/order/components/order-list/order-list.component.html
+++ b/src/app/order/components/order-list/order-list.component.html
@@ -70,7 +70,7 @@
         </td>
         <td class="p-3">{{order.date | date:'dd-MM-YYYY'}}</td>
         <td class="p-3">{{order.user.firstname}} {{order.user.lastname}}</td>
-        <td class="p-3 h-14"><button mat-flat-button color="accent" (click)="goTo(order.id)">Détails</button></td>
+        <td class="p-3 h-14"><button mat-flat-button color="accent" (click)="goTo(order.id)" class="w-24">Détails</button></td>
       </tr>
     </tbody>
   </table>
