--- a/src/app/static/components/header/header.component.html
+++ b/src/app/static/components/header/header.component.html
@@ -13,6 +13,7 @@
             <a *ngIf="!auth.isLoggedIn()" mat-list-item (click)="goToLogin()"><mat-icon>fingerprint</mat-icon> Login</a>
             <a *ngIf="auth.isLoggedIn()" mat-list-item (click)="goToLogout()"><mat-icon>exit_to_app</mat-icon> Logout</a>
             <div *ngIf="auth.isLoggedIn()">
+              <a *ngIf="auth.hasAuthority('ADM')" mat-list-item (click)="goToUser()" data-bs-dismiss="offcanvas">Utilisateurs</a>
               <a *ngIf="auth.hasAuthority('PGM')" mat-list-item (click)="goToItem()" data-bs-dismiss="offcanvas">Matériel</a>
               <a *ngIf="auth.hasAuthority('PGM')" mat-list-item (click)="goToLicence()" data-bs-dismiss="offcanvas">Licences</a>
               <a *ngIf="auth.hasAuthority('TEC')" mat-list-item (click)="goToIntervention()" data-bs-dismiss="offcanvas">Opérations</a>
@@ -40,6 +41,9 @@
         <button (click)="goToDashboard()" class="text-white">StockManager | {{auth.getUsername()}}</button>
       </div>
       <div class="justify-between invisible md:visible">
+        <span *ngIf="auth.hasAuthority('ADM')" class="">
+          <a (click)="goToUser()" mat-flat-button color="primary">Utilisateurs</a>
+        </span>
         <span *ngIf="auth.hasAuthority('PGM')" class="">
           <a (click)="goToItem()" mat-flat-button color="primary">Matériel</a>
         </span>
