--- a/src/app/static/components/header/header.component.html
+++ b/src/app/static/components/header/header.component.html
@@ -66,9 +66,8 @@
     </mat-toolbar>
     <div class="flex h-screen justify-center">
       <div class="w-screen md:w-5/6 h-full">
-        <div [ngClass]="toast.showError()||toast.showSuccess()?'opacity-1 w-full sticky top-16 z-4':'absolute top-0 left-0 w-1 h-1'" class="transition duration-1000 ease-in-out toast-container sm:flex sm:flex-row">
-          <div [ngClass]="toast.showSuccess()?'opacity-1 w-full':'opacity-0 w-0 h-0'" class="z-50 transition-all duration-1000 text-white text-center font-bold rounded-2xl mt-5 p-2 success">{{toast.successMessage()}}</div>
-          <div [ngClass]="toast.showError()?'opacity-1 w-full':'opacity-0 w-0 h-0'" class="z-50 transition-all duration-1000 text-white text-center font-bold rounded-2xl mt-5 p-2 error">{{toast.errorMessage()}}</div>
+        <div *ngFor="let toast of toasts" class="w-full sticky top-16 z-4 toast-container sm:flex sm:flex-row">
+          <div [@fadeInOut]="toast?'shown':'hidden'" [ngClass]="toast.type=='success'?'success':'error'" class="w-full z-4 text-white text-center font-bold rounded-2xl mt-5 p-2">{{toast.message}}</div>
         </div>
         <div class="align-middle">
           <app-spinner></app-spinner>
