--- a/src/app/user/components/user-details/user-details.component.html
+++ b/src/app/user/components/user-details/user-details.component.html
@@ -1,9 +1,10 @@
 <div *ngIf="user" class="flex flex-col justify-center min-h-5/6 pt-10">
     <div class="font-bold text-2xl pb-10">
-        <p>Utilisateur: </p>
+        <p *ngIf="user.hasAuthority('ADM')">Administrateur: </p>
+        <p *ngIf="!user.hasAuthority('ADM')">Utilisateur: </p>
     </div>
     <div class="flex flex-row justify-between font-bold text-2xl pb-10">
-        <div class="flex flex-col justify-between">
+        <div [ngClass]="user.hasAuthority('ADM')?'text-red-400':'text-black'" class="flex flex-col justify-between">
             <p>{{user.username}}</p>
             <p>{{user.firstname}} | {{user.lastname}}</p>
         </div>
